kubernetes-templating/frontend/templates/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: frontend
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - hipster-front.34.123.97.185.nip.io
    secretName: hipster-front
  rules:
  - host: hispter-front.34.123.97.185.nip.io
    http:
      paths:
      - backend:
          serviceName: frontend
          servicePort: 8079
